Mon Oct  3 18:45:55 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kdb.h: Add magic number to _krb5_db_entry.  (This among other
	things will cause a backwards incompatible change to the database
	format.)  The previous magic number changes also force a database
	format change; we will eventually need to completely redo how we
	encode the database format, so that it isn't structure layout
	dependent!

	* Makefile.in: Fix install to obey ${DESTDIR}, copy conf.h and
		osconf.h from build tree.

	* Makefile.in: Fix "make install" to use $(srcdir) for header files.

Thu Sep 29 15:07:30 1994  Theodore Y. Ts'o  (tytso@dcl)

	* func_proto.h (krb5_realm_compare): Added prototype for functin
		donated by OpenVision.  (Compares two realms).

Wed Sep 21 18:10:55 1994  Theodore Y. Ts'o  (tytso@dcl)

	* func_proto.h (krb5_check_transited_list): Added prototype for
		function donated by Cybersafe.

Wed Aug 17 16:33:22 1994  Theodore Y. Ts'o  (tytso at tsx-11)

	* krb5.h (krb5_enc_kdc_rep_part): Added msg_type field.  Needed
	for the ASN.1 routines.

Tue Aug 16 22:01:56 1994  Mark Eichin  (eichin@cygnus.com)

	* configure.in: change test for USE_SYS_TIME_H to consistent
	(autoconf style) check for HAVE_SYS_TIME_H with
	TIME_WITH_SYS_TIME, and use them everywhere.
	* stock/osauto.h: get rid of USE_TIME_H.
	* stock/osconf.h: get rid of USE_TIME_H, rename USE_SYS_TIME_H.

Tue Aug  9 02:17:40 1994  Tom Yu  (tlyu@dragons-lair)

	* preauth.h: fix preauth function names as well (timestamp ->
	unixtime)

Mon Aug  8 22:36:24 1994  Theodore Y. Ts'o  (tytso at tsx-11)

	* proto.h: Change preauthentication names to match official names
	which bcn and I agreed upon.

Tue Aug  2 03:39:14 1994  Tom Yu  (tlyu@dragons-lair)

	* acconfig.h: add HAVE_SETVBUF

	* configure.in: changes to make things saner when checking for
	ANSI_STDIO

Thu Jul 14 03:31:06 1994  Tom Yu  (tlyu at dragons-lair)

	* Makefile.in: some cleanup to not echo cruft

Tue Jun 28 19:09:21 1994  Tom Yu  (tlyu at dragons-lair)
