@@ -27,6 +27,7 @@ krb5_checksum *outcksum;
 }
 
 krb5_checksum_entry rsa_md5_cksumtable_entry = {
+    0,
     md5_sum_func,
     RSA_MD5_CKSUM_LENGTH,
     1,					/* is collision proof */
